syntax = "proto3";

package data;

option go_package = "./proto;data";

message User {
  string dorm = 1;
  int32 room_number = 2;
  string user_name = 3;
  string surname = 4;
  string phone = 5;
  string instagram = 6;
  string facebook = 7;
}

message Product {
  string name = 1;
  string photo = 2;
  string currency = 3;
  double price = 4;
  string category = 5;
  string description = 6;
  string action_type = 7;
  int32  person_id = 8;
}

message GetProduct {
  string name = 1;
  string photo = 2;
  string currency = 3;
  double price = 4;
  string category = 5;
  string description = 6;
  string action_type = 7;
  int32  person_id = 8;
  string created_at = 9;
}

message FullPayload {
  User user = 1;
  Product product = 2;
}

message GetFullPayload {
  User user = 1;
  GetProduct product = 2;
}

message SaveResponse {
  string status = 1;
  string message = 2;
}

message FullPayloadList {
  repeated GetFullPayload payloads = 1;
}

message Empty {}

service Data {
  rpc SaveUser(User) returns (SaveResponse);
  rpc SaveProduct(Product) returns (SaveResponse);
  rpc SaveFullPayload(FullPayload) returns (SaveResponse);
  rpc GetAllData(Empty) returns (FullPayloadList);
}

